<?xml version="1.0"?>
<package format="2">
  <name>flea3</name>
  <version>0.0.0</version>
  <description>The flea3 package</description>

  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
