<?xml version="1.0"?>
<package format="2">
  <name>flea3</name>
  <version>0.1.0</version>
  <description>The flea3 package</description>

  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>camera_base</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
